fixed scrollbar in footer

--- a/app/assets/stylesheets/custom.scss.less
+++ b/app/assets/stylesheets/custom.scss.less
@@ -73,7 +73,6 @@ body {
   border-top: 1px solid #CBC6C2;
   z-index: 9999;
   width:100vw !important;
-  overflow-x:hidden !important;
 }
 
 .footer form {
